<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagAndFragLuigi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nick_text">Podaj nick</string>
    <string name="preferences_name_default">Wpisz swój nick</string>
	<string name="preferences_name">name</string>
	<string name="preferences_id">id</string>
	<string name="preference_file">com.example.tagandfrag.preference_file</string>
	<string name="nick_button">Potwierdź swój nick</string>
	<string name="weapon_button">Wybierz broń</string>
	<string name="team_button">Potwierdź wybór drużyny</string>
	<string name="nick_too_short">Nick jest za krótki</string>
	<string name="nick_incorrect">Ten nick nie jest Twój!</string>
	<string name="start_game">Rozpocznij grę</string>
	<string name="show_id">Pokaż id gracza</string>
	<string name="change_id">Zmień id gracza</string>
	<string name="show_information">Informacje</string>
	<string name="help">Pomoc</string>
	<string name="your_id">Twoje id to </string>
	<string name="OK">OK</string>
	<string name="your_id_positive_button">Potwierdź zmianę id</string>
	<string name="your_id_negative_button">Odrzuć zmianę id</string>
</resources>
